--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,12 +5,12 @@
 
   <div class="field">
     <%= f.label :name %><br />
-    <%= f.text_field :username, class: "name" autocomplete: "name" %></div>
+    <%= f.text_field :username, class: "username autocomplete username" %></div>
 
 
   <div class="field">
     <%= f.label :email %><br />
-    <%= f.email_field :email, class: "email" autofocus: true, autocomplete: "email" %>
+    <%= f.email_field :email, class: "email autofocus true autocomplete email" %>
   </div>
 
   <div class="field">
@@ -18,17 +18,16 @@
     <% if @minimum_password_length %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
     <% end %><br />
-    <%= f.password_field :password, class: "password" autocomplete: "new-password" %>
+    <%= f.password_field :password, class: "passward autocomplete new-password" %>
   </div>
 
   <div class="field">
     <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, class: "password_confirm" autocomplete: "new-password" %>
+    <%= f.password_field :password_confirmation, class: "password_confirma autocomplete new-password" %>
   </div>
 
   <div class="actions">
     <%= f.submit "Sign up" %>
   </div>
-<% end %>
-
+  <% end %>
 <%= render "devise/shared/links" %>
