--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,7 +5,7 @@
 
   <div class="field">
     <%= f.label :name %><br />
-    <%= f.text_field :username, class: "username autocomplete username" %></div>
+    <%= f.text_field :name, class: "name autocomplete name" %></div>
 
 
   <div class="field">
